--- a/employee/templates/employee/employee_create_form.html
+++ b/employee/templates/employee/employee_create_form.html
@@ -1,31 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Employee Create Form</title>
-</head>
-<body>
-    <form method="post" action="{% url 'employee:create' %}" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% if form.errors %}
-            <!-- Error messaging -->
-            <div id="errors">
-                <div class="inner">
-                    <p>There were some errors in the information you entered. Please correct the following:</p>
-                    {{ form.non_field_errors }}
-                    <ul>
-                        {% for field in form %}
-                            {% if field.errors %}<li>{{ field }}: {{ field.errors|striptags }}</li>{% endif %}
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-            <!-- /Error messaging -->
-        {% endif %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
-    </form>
-</body>
-</html>
+
+{% extends 'employee/base.html' %}
+
+{% load crispy_form_tags %}
+
+
+{% block content %}
+<form method="post" action="{% url 'employee:create' %}" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+{% endblock content %}
+    
